--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ shop/.gitignor/__pycache__
 shop/.gitignor/venv
 shop/.gitignor/db.sqlite3
 shop/.static
-shop/.gitignor/media
+shop/.gitignor/media/*
+!media/.gitkeep
 shop/.env
